# uvloop

./: .deepsource.toml  .editorconfig  .flake8  .gitignore  .gitmodules  .travis.yml  LICENSE-APACHE  LICENSE-MIT  MANIFEST.in  Makefile  README  README.rst  TODO  appveyor.yml  fs_test.py  mypy.ini  pyproject.toml  pytest.ini  requirements.dev.txt  requirements.txt  setup.py
.ci/: appveyor.yml  build-manylinux-wheels.sh  package-version.py  pypi-check.py  requirements.txt  s3-download-release.py  s3-upload.py  travis-build-and-upload.sh  travis-build-wheels.sh  travis-install.sh  travis-release.sh  travis-tests.sh
.github/: ISSUE_TEMPLATE.md  release_log.py
.github/workflows/: build-manylinux-wheels.sh  build.yml  python-app.yml  release.yml  test-requirements.txt  test-wheels.sh  tests.yml
docs/: Makefile  conf.py  index.rst
docs/api/: index.rst
docs/dev/: index.rst
docs/user/: index.rst
examples/bench/: client.py  echoclient.py  echoserver.py  rlserver.py  server.py
tests/: __init__.py  __main__.py  _testbase.py  cython_helper.pyx  test_aiohttp.py  test_base.py  test_close_notify.py  test_context.py  test_cython.py  test_dealloc.py  test_dns.py  test_executors.py  test_fs_event.py  test_futures.py  test_get_uvloop_ptr.py  test_libuv_api.py  test_pipes.py  test_pointers.py  test_process.py  test_process_spawning.py  test_regr1.py  test_runner.py  test_signals.py  test_sockets.py  test_sourcecode.py  test_tasks.py  test_tcp.py  test_testbase.py  test_timers.py  test_tracing.py  test_udp.py  test_unix.py  test_uv_timer_when_after_cb.py  utils.py
uvloop/: __init__.py  __init__.pyi  _noop.py  _patch.py  _test_sockets.py  _testbase.py  _version.py  async_.pxd  async_.pyx  cbhandles.pxd  cbhandles.pyx  chain_futs.pyx  clibuv.pxd  const.py  consts.pxi  dns.pxd  dns.pyx  errors.pyx  future.pyx  futures.c  handle.pxd  handle.pyx  idle.pxd  idle.pyx  loop.pxd  loop.pyi  loop.pyx  loop.pyx.in  os_signal.pxd  os_signal.pyx  poll.pxd  poll.pyx  pseudosock.pyx  request.pxd  request.pyx  server.pxd  server.pyx  signal.pxd  signal.pyx  sslproto.pxd  (+15 more)
uvloop/handles/: async_.pxd  async_.pyx  basetransport.pxd  basetransport.pyx  check.pxd  check.pyx  fsevent.pxd  fsevent.pyx  handle.pxd  handle.pyx  idle.pxd  idle.pyx  pipe.pxd  pipe.pyx  poll.pxd  poll.pyx  process.pxd  process.pyx  server.pxd  server.pyx  signal.pxd  signal.pyx  stream.pxd  stream.pyx  streamserver.pxd  streamserver.pyx  tcp.pxd  tcp.pyx  timer.pxd  timer.pyx  transport.pxd  transport.pyx  udp.pxd  udp.pyx
uvloop/includes/: __init__.py  compat.h  consts.pxi  debug.h  debug.pxd  flowcontrol.pxd  fork_handler.h  posix.pxi  python.pxd  stdlib.pxi  system.h  system.pxd  uv.pxd  windows.pxi
