[project]
name = "uvloop"
description = "Fast implementation of asyncio event loop on top of libuv"
authors = [{name = "Yury Selivanov", email = "yury@magic.io"}]
requires-python = '>=3.8.1'
readme = "README.rst"
license = "MIT OR Apache-2.0"
license-files = ["LICENSE-APACHE", "LICENSE-MIT"]
dynamic = ["version"]
keywords = [
    "asyncio",
    "networking",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: System :: Networking",
]

[project.urls]
github = "https://github.com/MagicStack/uvloop"

[project.optional-dependencies]
test = [
    # pycodestyle is a dependency of flake8, but it must be frozen because
    # their combination breaks too often
    # (example breakage: https://gitlab.com/pycqa/flake8/issues/427)
    'aiohttp>=3.10.5',
    'flake8~=6.1',
    'psutil',
    'pycodestyle~=2.11.0',
    'pyOpenSSL~=25.3.0',
    'mypy>=0.800',
]
dev = [
    'setuptools>=77.0.3',
    'Cython~=3.0',
]
docs = [
    'Sphinx~=4.1.2',
    'sphinxcontrib-asyncio~=0.3.0',
    'sphinx_rtd_theme~=0.5.2',
]

[build-system]
requires = [
    "setuptools>=77.0.3",
    "wheel",
    "Cython~=3.1",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false
packages = ["uvloop"]

[tool.setuptools.exclude-package-data]
"*" = ["*.c", "*.h"]

[tool.cibuildwheel]
build-frontend = "build"
test-extras = "test"
test-command = "python -m unittest discover -v {project}/tests"

[tool.pytest.ini_options]
addopts = "--capture=no --assert=plain --strict-markers --tb=native --import-mode=importlib"
testpaths = "tests"
filterwarnings = "default"
