[project]
name = "uvloop"
description = "Fast implementation of asyncio event loop on top of libuv"
authors = [{name = "Yury Selivanov", email = "yury@magic.io"}]
requires-python = '>=3.8.1'
readme = "README.rst"
license = {text = "MIT License"}
dynamic = ["version"]
keywords = [
    "asyncio",
    "networking",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: System :: Networking",
]

[project.urls]
github = "https://github.com/MagicStack/uvloop"

[project.optional-dependencies]
test = [
    # pycodestyle is a dependency of flake8, but it must be frozen because
    # their combination breaks too often
    # (example breakage: https://gitlab.com/pycqa/flake8/issues/427)
    'aiohttp>=3.10.5',
    'flake8~=6.1',
    'psutil',
    'pycodestyle~=2.11.0',
    'pyOpenSSL~=25.3.0',
    'mypy>=0.800',
]
dev = [
    'packaging>=20',
    'setuptools>=60',
    'Cython~=3.1',
]
docs = [
    'Sphinx~=4.1.2',
    'sphinxcontrib-asyncio~=0.3.0',
    'sphinx_rtd_theme~=0.5.2',
]

[build-system]
requires = [
    "packaging>=20",
    "setuptools>=60",
    "Cython~=3.1",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false
packages = ["uvloop"]

[tool.setuptools.exclude-package-data]
"*" = ["*.c", "*.h"]

[tool.cibuildwheel]
build-frontend = "build"
test-extras = "test"
test-command = "python -m unittest discover -v {project}/tests"

[tool.pytest.ini_options]
addopts = "--capture=no --assert=plain --strict-markers --tb=native --import-mode=importlib"
testpaths = "tests"
filterwarnings = "default"

[tool.ruff.lint]
extend-select = [
    "B",
    "C4",
    "EXE",
    "ISC",
    "PIE",
    "PYI",
    "SLOT",
    "PERF",
    "SIM",
    "FLY",
    "PERF",
    "W",
    "PLC",
    "PLE",
    "PLR",
    "UP",
    "FURB",
    "RUF",
]
ignore = [
    "B007",    # Loop control variable not used within loop body
    "B011",    # Do not `assert False` (`python -O` removes these calls), raise `AssertionError()`
    "PYI026",  # Use `typing_extensions.TypeAlias` for type alias
    "SIM105",  # Use `contextlib.suppress(OSError)` instead of `try`-`except`-`pass`
    "SIM108",  # Use ternary operator instead of `if`-`else`-block
    "PLC0415", # `import` should be at the top-level of a file
    "PLE0605", # Invalid format for `__all__`, must be `tuple` or `list`
    "PLR09",   # Too many [...]
    "PLR2004", # Magic value used in comparison, consider replacing with a constant variable*
    "RUF005",  # Consider using unpacking operator instead of concatenation
    "RUF006",  # Store a reference to the return value
    "RUF059",  # Unpacked variable is never used
    "RUF100",  # Unused blanket `noqa` directive
]

[tool.ruff.lint.extend-per-file-ignores]
"setup.py" = [
    "B904",    # Within an `except` clause, raise exceptions with `raise ... from err` or `raise ... from None` to distinguish them from errors in exception handling
    "C408",    # Unnecessary `dict()` call (rewrite as a literal)
    "E402",    # Module level import not at top of file
]
"tests/**" = [
    "B018",    # Found useless expression. Either assign it to a variable or remove it.
    "B904",    # Within an `except` clause, raise exceptions with `raise ... from err` or `raise ... from None` to distinguish them from errors in exception handling
    "B023",    # Function definition does not bind loop variable
    "C408",    # Unnecessary `dict()` call (rewrite as a literal)
    "E731",    # Do not assign a `lambda` expression, use a `def`
    "PERF203", # `try`-`except` within a loop incurs performance overhead
    "SIM115",  # Use a context manager for opening files
    "SIM117",  # Use a single `with` statement with multiple contexts instead of nested `with` statements
    "RUF012",  # Mutable default value for class attribute
]
